Updated Index page.

--- a/PracticeSQLApp/Pages/Index.cshtml
+++ b/PracticeSQLApp/Pages/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>*@
 <div class="text-center">
     <h1 class="display-4">This is a list of Products</h1>    
     <table class="table table-bordered">
