Updated the comments

--- a/PracticeSQLApp/Pages/Index.cshtml
+++ b/PracticeSQLApp/Pages/Index.cshtml
@@ -15,7 +15,7 @@
   <thead>
     <tr>
       <th scope="col">Product ID</th>
-      <th scope="col">Product Name</th>
+      <th scope="col">Product Names</th>
       <th scope="col">Quantity</th>      
     </tr>
   </thead>
