Called the Azure function to fetch the product data - Azure function integration.

--- a/PracticeSQLApp/Pages/Index.cshtml
+++ b/PracticeSQLApp/Pages/Index.cshtml
@@ -6,11 +6,7 @@
 
 @if (Model.IsBeta)
 {
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core - Umakant Yadav - Beta Version</a>.</p>
-    </div>
-
+       <h2 class="display-4">Welcome to Beta Version</h2>
 }
 
 <div class="text-center">
